--- a/public/views/index.html
+++ b/public/views/index.html
@@ -6,13 +6,14 @@
 </head>
   <script src="scripts/pixi.min.js"></script>
   <script src="scripts/jquery.min.js"></script>
+  <script src="scripts/GameEngine.js"></script>
 <body>
 
 </body>
 </html>
 
 
-<script>
+<!--<script>
 $( document ).ready(function() {
     var type = "WebGL"
     if(!PIXI.utils.isWebGLSupported()){
@@ -44,4 +45,4 @@ app.ticker.add(function(delta) {
     bunny.rotation += 0.1 * delta;
 });
 });
-</script>
+</script>-->
